src/snapshots/ghqctoolkit__comment__tests__comment_body_multiple_hunks.snap
---
source: src/comment.rs
expression: result
---
# QC Notification

@reviewer1, @reviewer2

## Metadata
* current commit: 2468ace13579bdf24680ace13579bdf246802468
* previous commit: 1357bdf24680ace13579bdf24680ace135791357
* [commit comparison](https://github.com/owner/repo/compare/prev..current)

## File Difference
```diff
@@ previous script: lines 1-11 @@
@@  current script: lines 1-13 @@
  1 function start() {
- 2     console.log("starting");
+ 2     console.log("starting application");
  3     let x = 1;
  4     let y = 2;
+ 5     let w = 4; // new variable
  6 }
  7 
  8 function middle() {
- 8     console.log("middle");
- 9     return "old value";
+ 9     console.log("middle processing");
+ 10     return "new value";
+ 11     let extra = "something";
  12 }
  13 
```
