src/snapshots/ghqctoolkit__comment__tests__comment_body_no_diff_flag.snap
---
source: src/comment.rs
expression: result
---
# QC Notification

## Metadata
* current commit: 9876543210fedcba9876543210fedcba98765432
* previous commit: fedcba9876543210fedcba9876543210fedcba98
* [commit comparison](https://github.com/owner/repo/compare/prev..current)
