src/snapshots/ghqctoolkit__comment__tests__comment_body_no_previous_commit.snap
---
source: src/comment.rs
expression: result
---
# QC Notification

## Metadata
* current commit: aabbccdd11223344aabbccdd11223344aabbccdd
